--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -8,6 +8,7 @@
 #  popularity :integer          default(0), not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  image_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
