--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -1,14 +1,14 @@
 # == Schema Information
 #
-# Table name: users
+# Table name: images
 #
-#  id              :integer          not null, primary key
-#  username        :string           not null
-#  password_digest :string           not null
-#  session_token   :string           not null
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
-#  image_id        :integer
+#  id            :integer          not null, primary key
+#  url           :string           not null
+#  thumbnail_url :string           not null
+#  width         :integer
+#  height        :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
